k8s/apache-php/apache-php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: apache-php
  namespace: forma-madiba
spec:
  replicas: 5
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
      - name: php-config
        configMap:
          name: php-configmap
          items:
            - key: ports.conf
              path: ports.conf

      containers:
      - image: tutum/apache-php
        name: apache
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: php-config
          mountPath: /etc/apache2/
          subPath: ports.conf
