k8s/apache-php/apache-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: forma-madiba
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
