k8s/apache-php/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: #votre namespace
  labels:
    app: db
spec:
  ports:
    - port: 3306
  selector:
    app: db
