k8s/apache-php/ingresss-apache.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-php
  namespace: #votre namespace
  annotations:
      kubernetes.io/ingress.class: "nginx"
spec:
        #ingressClassName: nginx
  rules:
    - host: app-madiba.ludovic.tech
      http:
        paths:
          - backend:
              service:
                name: apache-php
                port:
                  number: 80
            path: /
            pathType: Prefix
